# telegram-offline-ai-assistant

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sample.env  verify_system.py
app/: ai_client.py  router.py  tg_client.py
app/config/: system_config.py  system_data.py
app/memory/: facts.py  long_term.py  short_term.py
app/nlp/: chunk.py  summarize.py
app/storage/: db.py  files.py
app/training/: __init__.py  bot_workflows.py  system_prompts.py  user_info.py
app/utils/: logging.py  rate_limit.py  tokens.py  ui_formatter.py  user_status.py
config/: system_data.json  system_prompts.json  workflows.json
tests/: test_ai_client.py  test_memory.py
